--- a/report.html
+++ b/report.html
@@ -1,11 +1,10 @@
-<a href="https://www.scu.edu/">Santa Clara University</a>, <a href="repository/1.html">1.html</a>, 200, 83, 16
-<br><a href="https://www.scu.edu/#content">Santa Clara University</a>, <a href="repository/2.html">2.html</a>, 200, 83, 16
-<br><a href="https://www.scu.edu/aboutscu/">About SCU - Santa Clara University</a>, <a href="repository/3.html">3.html</a>, 200, 87, 13
-<br><a href="https://www.scu.edu/academics/">Academics - Santa Clara University</a>, <a href="repository/4.html">4.html</a>, 200, 86, 10
-<br><a href="https://www.scu.edu/admission/">Admission - Santa Clara University</a>, <a href="repository/5.html">5.html</a>, 200, 83, 10
-<br><a href="https://www.scu.edu/campus-life/">Campus Life - Santa Clara University</a>, <a href="repository/6.html">6.html</a>, 200, 94, 20
-<br><a href="https://www.scu.edu/athletics/">Athletics - Santa Clara University</a>, <a href="repository/7.html">7.html</a>, 200, 79, 13
-<br><a href="https://www.scu.edu/global/">Global - Santa Clara University</a>, <a href="repository/8.html">8.html</a>, 200, 82, 11
-<br><a href="https://www.scu.edu/giving/">Giving - Santa Clara University</a>, <a href="repository/9.html">9.html</a>, 200, 77, 10
-<br><a href="https://www.scu.edu/news-and-events/">News & Events - Santa Clara University</a>, <a href="repository/10.html">10.html</a>, 200, 94, 17
-<br>
+<a href="https://www.scu.edu/">Santa Clara University</a>, <a href="repository/1.html">1.html</a>, 200, 83, 16<br>
+<a href="https://www.scu.edu/#content">Santa Clara University</a>, <a href="repository/2.html">2.html</a>, 200, 83, 16<br>
+<a href="https://www.scu.edu/aboutscu/">About SCU - Santa Clara University</a>, <a href="repository/3.html">3.html</a>, 200, 87, 13<br>
+<a href="https://www.scu.edu/academics/">Academics - Santa Clara University</a>, <a href="repository/4.html">4.html</a>, 200, 86, 10<br>
+<a href="https://www.scu.edu/admission/">Admission - Santa Clara University</a>, <a href="repository/5.html">5.html</a>, 200, 83, 10<br>
+<a href="https://www.scu.edu/campus-life/">Campus Life - Santa Clara University</a>, <a href="repository/6.html">6.html</a>, 200, 94, 20<br>
+<a href="https://www.scu.edu/athletics/">Athletics - Santa Clara University</a>, <a href="repository/7.html">7.html</a>, 200, 79, 13<br>
+<a href="https://www.scu.edu/global/">Global - Santa Clara University</a>, <a href="repository/8.html">8.html</a>, 200, 82, 11<br>
+<a href="https://www.scu.edu/giving/">Giving - Santa Clara University</a>, <a href="repository/9.html">9.html</a>, 200, 77, 10<br>
+<a href="https://www.scu.edu/news-and-events/">News & Events - Santa Clara University</a>, <a href="repository/10.html">10.html</a>, 200, 94, 17<br>
